k8s/bookstore/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-rc
  labels:
    name: back-rc
spec:
  replicas: 1
  selector:
    matchLabels:
      name: back-pod
  template:
    metadata:
      labels: 
        name: back-pod
    spec:
      nodeSelector:
        zone: node
      containers:
      - name: back
        image: veiasai/bookstore-back:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.001"
            memory: 128Mi
          limits:
            cpu: "0.01"
            memory: 384Mi
