k8s/bookstore/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-back
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    name: back-pod
