k8s/bookstore/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels: 
    name: front-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
    nodePort: 32008
  selector:
    name: front-pod
