k8s/bookstore/bookstore-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: master
    http:
      paths:
      - backend:
          serviceName: bookstore-back
          servicePort: 8080
